# ContextSearch

./: README.md  config.toml  makefile  pyproject.toml
docker/build_dev/: dockerfile
docker/integration_tests/: docker-compose.yml  dockerfile
docker/unit_tests/: docker-compose.yml  dockerfile
examples/: ragger_example_retrieve.py  ragger_example_submit.py
src/context_search/: __init__.py  data_classes.py  data_manager.py
src/context_search/communicator/: __init__.py  communicator.py
src/context_search/preprocessor/: embedder.py  extractor.py  preprocessor.py  text_splitter.py
src/context_search/reader/: lang_adapter.py  reader.py
src/context_search/utils/: __init__.py  config_variables.py
test/integration_tests/data_manager_test/communicator_test/: communicator_test.py
test/integration_tests/data_manager_test/preprocessor_test/: preprocessor_test.py
test/unit_tests/data_manager_test/: literature_dataclass_test.py
test/unit_tests/data_manager_test/communicator_test/: communicator_test.py
test/unit_tests/data_manager_test/preprocessor_test/: embedder_test.py  preprocessor_test.py  test_embedding.npy  text_splitter_test.py
test/unit_tests/data_manager_test/reader_test/: pdf_reader_multilang.py  test_reader_manager.py
