[tool.poetry]
name = "ContextSearch"
version = "0.5.0"
description = "User friendly system for semantic search."
authors = [
    "ArturOle"
]
license = "GPL-3.0"
readme = "README.md"
keywords = ["semantic search", "ocr", "rag", "document-embedding", "contextual-search", "retrieval-augmented-generation", "pdf"]
packages = [{include = "context_search", from="src"}]

[tool.poetry.dependencies]
python = "^3.10"
neo4j = "^5.25.0"
pdf2image = "^1.17.0"
pydantic = "^2.9.2"
PyMuPDF = "^1.24.10"
pytesseract = "^0.3.13"
pytextrank = "^3.3.0"
spacy = "^3.8.2"
tqdm = "^4.66.5"
transformers = "^4.45.1"
numpy = "^2.0.2"
torch = { version = "^2.3.1", source = "torch"}
en_core_web_sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0.tar.gz"}

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
pytest-mock =  "^3.14.0"
pytest-cov = "^5.0.0"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "secondary"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
