[tool.poetry]
name = "ContextSearch"
version = "0.7.0"
description = "User friendly system for semantic search."
authors = [
    "ArturOle"
]
license = "GPL-3.0"
readme = "README.md"
keywords = ["semantic search", "ocr", "rag", "document-embedding", "contextual-search", "retrieval-augmented-generation", "pdf"]
packages = [{include = "context_search", from="src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
neo4j = "^5.25.0"
pdf2image = "^1.17.0"
pydantic = "^2.9.2"
PyMuPDF = "^1.24.10"
pytesseract = "^0.3.13"
tqdm = "^4.66.5"
numpy = ">=1.21,<2"
fastembed = "0.4.1"
fast-langdetect = "^0.2.2"


[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
pytest-mock =  "^3.14.0"
pytest-cov = "^5.0.0"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.format]
max-module-lines = 99
